# custom-tauri-notifications

./: README.md  package.json
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
